examples/errors/lvalue/arithmetic.xana
def main() do
    a :: int

    a + 1 = 5 # Lvalue required
end
